# ros2-learning-robots

./: README.md
requirements_documents/: gantt chart.xlsx
requirements_documents/requirements/: Project Proposal-4.docx
requirements_documents/requirements/lr_turtlebot_sim (2)/launch/: maze_1.launch.py  maze_2.launch.py  maze_3.launch.py  robot_state_publisher.launch.py
rosi_rl_project/src/lr_ppo/: package.xml  setup.py
rosi_rl_project/src/lr_ppo/lr_ppo/: env_node.py  env_node.py.save  observation.py  ppo_trainer.py  reward.py  termination.py  trainer.py
rosi_rl_project/src/lr_ppo_baseline/: package.xml  setup.py
rosi_rl_project/src/lr_ppo_baseline/lr_ppo_baseline/: env_node.py  env_node.py.save  observation.py  reward.py
rosi_rl_project/src/lr_turtlebot_sim/: CMakeLists.txt
rosi_rl_project/src/lr_turtlebot_sim/launch/: spawn_turtlebot3.launch.py  turtlebot_in_maze.launch.py
rosi_rl_project/src/lr_turtlebot_sim/worlds/: maze_2.world  maze_3.world
week 2/requirements/: Gantt Chart Template.xlsx  Project Plan.docx
week 2/requirements/lr_turtlebot_sim (2)/: API_REFERENCE.md  TUTORIAL.md  package.xml
week 2/requirements/lr_turtlebot_sim (2)/scripts/: teleop_keyboard.py
week 2/requirements/lr_turtlebot_sim (2)/worlds/: maze_1.world
